--- a/discord.html
+++ b/discord.html
@@ -1,81 +1,59 @@
-<!doctype html>
-<html lang="vi" data-theme="dark">
+<!DOCTYPE html>
+<html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Regeneration</title>
-  <meta name="description" content="Regeneration — Cộng đồng game thủ lưu giữ kỷ niệm." />
-  <meta name="theme-color" content="#0b1020" />
-  <link rel="icon" href="assets/img/logo.svg" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <!-- Google Analytics (thay GA_MEASUREMENT_ID của bạn) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'GA_MEASUREMENT_ID');
-  </script> -->
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Regeneration - Discord</title>
+  <link rel="icon" href="assets/images/logo.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-0b07LdhT8H1jASpyxfaKjGLumZ5qX6Ch12yvDqOiiMHDL/95B2S/bR5E2lE8pQnXl16rDpD+s/COM24kTx5gYg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
-  <header class="site-header">
-    <div class="container nav">
-      <a class="brand" href="index.html" aria-label="Trang chủ">
-        <img src="assets/img/logo.svg" alt="Logo Regeneration" width="34" height="34"/>
-        <span>Regeneration</span>
-      </a>
-      <nav id="menu" class="menu" aria-label="Main">
-        <a data-i18n="nav.home" href="index.html">Trang chủ</a>
-        <a data-i18n="nav.news" href="news.html">Tin tức</a>
-        <a data-i18n="nav.tournaments" href="tournaments.html">Giải đấu</a>
-        <a data-i18n="nav.gallery" href="gallery.html">Thư viện</a>
-        <a data-i18n="nav.memories" href="memories.html">Kỷ niệm</a>
-        <a data-i18n="nav.blog" href="blog.html">Blog</a>
-        <a data-i18n="nav.discord" href="discord.html">Discord</a>
-        <a data-i18n="nav.about" href="about.html">About/Team</a>
-        <a data-i18n="nav.contact" href="contact.html">Liên hệ</a>
-      </nav>
-      <div class="actions">
-        <button id="themeBtn" class="btn ghost" aria-label="Đổi giao diện">🌙</button>
-        <select id="langSelect" class="lang-select" aria-label="Language">
-          <option value="vi">VI</option>
-          <option value="en">EN</option>
-        </select>
-        <button id="toggleMenu" class="btn ghost mobile-toggle" aria-controls="menu" aria-expanded="false">☰</button>
-      </div>
+  <header class="header">
+    <div class="logo">
+      <img src="assets/images/logo.png" alt="logo" />
+      <span class="site-title">Regeneration</span>
+    </div>
+    <nav class="nav">
+      <ul>
+        <li><a href="index.html" class="lang-vi">Trang chủ</a><a href="index.html" class="lang-en">Home</a></li>
+        <li><a href="news.html" class="lang-vi">Tin tức</a><a href="news.html" class="lang-en">News</a></li>
+        <li><a href="tournaments.html" class="lang-vi">Giải đấu</a><a href="tournaments.html" class="lang-en">Tournaments</a></li>
+        <li><a href="gallery.html" class="lang-vi">Thư viện</a><a href="gallery.html" class="lang-en">Gallery</a></li>
+        <li><a href="memory.html" class="lang-vi">Kỷ niệm</a><a href="memory.html" class="lang-en">Memory</a></li>
+        <li><a href="blog.html" class="lang-vi">Blog</a><a href="blog.html" class="lang-en">Blog</a></li>
+        <li><a href="about.html" class="lang-vi">Giới thiệu</a><a href="about.html" class="lang-en">About</a></li>
+        <li><a href="contact.html" class="lang-vi">Liên hệ</a><a href="contact.html" class="lang-en">Contact</a></li>
+        <li><a href="rules.html" class="lang-vi">Nội quy</a><a href="rules.html" class="lang-en">Rules</a></li>
+      </ul>
+    </nav>
+    <div class="controls">
+      <button id="langViBtn">VI</button>
+      <button id="langEnBtn">EN</button>
+      <button id="themeToggle"><i class="fa fa-adjust"></i></button>
     </div>
   </header>
-
-
   <section class="section">
-    <div class="container">
-      <h2>Discord</h2>
-      <p>Tham gia server để trò chuyện, ghép đội và nhận thông báo.</p>
-      <a class="btn" href="https://discord.gg/8NHd7aAab2">Vào Discord</a>
-      <div class="card" style="margin-top:1rem">
-        <h3>Nội quy nhanh</h3>
-        <ul>
-          <li>Tôn trọng, không toxic.</li>
-          <li>Không spam, không quảng cáo bừa bãi.</li>
-          <li>Dùng <span class="kbd">#support</span> khi cần trợ giúp.</li>
-        </ul>
-      </div>
-    </div>
+    <h2>Discord</h2>
+    <p class="about-section">
+      <span class="lang-vi">Tham gia Discord của chúng tôi để trò chuyện, chơi game và cập nhật tin tức mới nhất.</span>
+      <span class="lang-en">Join our Discord to chat, play games and get the latest updates.</span>
+    </p>
+    <p style="text-align: center; margin: 20px 0;">
+      <a href="https://discord.gg/8NHd7aAab2" target="_blank" style="font-size: 1.2rem; background: var(--accent-color); color: var(--primary-color); padding: 10px 20px; border-radius: 4px; text-decoration: none;">
+        <i class="fab fa-discord"></i> <span class="lang-vi">Tham gia server</span><span class="lang-en">Join server</span>
+      </a>
+    </p>
   </section>
-
-
-  <footer class="site-footer">
-    <div class="container footer-row">
-      <div>© <span id="year"></span> Regeneration — <span data-i18n="footer.by">Xây dựng bởi cộng đồng</span> ♥</div>
-      <div class="socials">
-        <a href="https://discord.gg/8NHd7aAab2" aria-label="Discord">Discord</a>
-      </div>
-    </div>
+  <footer class="footer">
+    <p>&copy; 2025 Regeneration. <span class="lang-vi">Mọi quyền được bảo lưu.</span><span class="lang-en">All rights reserved.</span></p>
+    <p>
+      <span class="lang-vi">Theo dõi chúng tôi:</span><span class="lang-en">Follow us:</span>
+      <a href="https://discord.gg/8NHd7aAab2" target="_blank"><i class="fab fa-discord"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+    </p>
   </footer>
-  <script src="assets/js/i18n.js"></script>
-  <script src="assets/js/main.js"></script>
-
+  <script src="js/main.js" defer></script>
 </body>
 </html>
